# thin-multi-starter

./: README.md  SETUP.md  chainlit_ui.py  main.py  prep.md  pyproject.toml  requirements.txt  run.sh
api/: agent_api.py
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/agents/: city_culture_agent.py  culture_guru_agent.py  intent_router_principal_agent.py  storyteller_chat_agent.py
backend/agents/azure_ai_agents/: culinary_advisor_agent.py
backend/agents/copilot_studio/: explorer_guide_agent.py  tour_guide_agent.py
backend/agents/copilot_studio/base/: copilot_agent.py  copilot_agent_channel.py  copilot_agent_thread.py  copilot_message_content.py
backend/api/: agent_api.py
backend/models/: agent_response.py  azure_ai_agent.py  conversation_state.py  custom_agent.py  enumerations.py
backend/orchestrator/: single_chat_strategy.py
backend/telemetry/: telemetry.py  tracing_middleware.py
backend/utils/: response_parser.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ChatPanel.tsx  LeftPanel.tsx  LogWindow.tsx  MainCanvas.tsx  NodeBox.tsx
frontend/src/context/: LoggingContext.tsx  ToggleContext.tsx
frontend/src/styles/: App.css  flowStyles.css
models/: agent_request.py  agent_response.py  available_agents.py  enumerations.py
orchestrator/: chat_strategy.py  intent_router_strategy.py  request_dispatcher.py
