[project]
name = "thin-multi-agent-sample"
version = "0.1.0"
description = "Sample application to demonstrate multi-agent architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "azure-monitor-opentelemetry>=1.6.9",
 "azure-search-documents==11.6.0b4",
 "chainlit>=2.5.5",
 "fastapi[standard]>=0.115.12",
 "opentelemetry-api>=1.31.1",
 "opentelemetry-exporter-otlp>=1.31.1",
 "opentelemetry-instrumentation-aiohttp-client>=0.52b1",
 "opentelemetry-instrumentation-fastapi>=0.52b1",
 "opentelemetry-sdk>=1.31.1",
 "python-dotenv>=1.1.0",
 "semantic-kernel[azure]==1.29",
 "uvicorn>=0.34.2",
]
